[package]
name = "import-state-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
env_logger = "0.10.0"
solana-sdk = { path = "../sdk", version = "=1.9.29" }
evm-state = { path = "../evm-utils/evm-state" }
primitive-types = "0.11.0"
hex = "0.4.3"
clap = { version = "4", features = ["derive"] }

